# kruonis

./: .dockerignore  Cargo.toml  deploy.init.sh  skaffold.yml  werf.yaml
.github/workflows/: ci.yml  deploy.yml
.helm/: secret-values.yaml  values.yaml
.helm/templates/: 09-cm-app.yaml  10-app.yaml  _volumes.tpl
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  env.yml  pdb.yaml  service.yaml  statefulset.yaml
docker/: Dockerfile
src/: event.rs
src/app/: message_handler.rs  mod.rs
