[package]
name = "kruonis"
version = "0.2.3"
authors = ["Shamir Khodzha <khodzha.sh@gmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1", features = ["attributes", "unstable"] }
config = "0.11"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"

svc-agent = { version = "0.17" }
svc-authn = { version = "0.6", features = ["jose"] }
futures = "0.3.4"
